14,1: Release-related website updates
Everything except the announcement itself

--- a/website/content/en/portmgr/policies_eol.adoc
+++ b/website/content/en/portmgr/policies_eol.adoc
@@ -62,7 +62,19 @@ The _Estimated EoL (end-of-life)_ column gives the earliest date on which that b
 * FreeBSD:14:powerpc64 (only quarterly is updated)
 * FreeBSD:14:powerpc64le (only quarterly is updated)
 
-|14.1-RELEASE + 3 months
+|September 30, 2024
+
+|releng/14.1 |14.1-RELEASE |releng/14.1 a|
+* FreeBSD:14:aarch64
+* FreeBSD:14:amd64
+* FreeBSD:14:armv6
+* FreeBSD:14:armv7
+* FreeBSD:14:i386
+* FreeBSD:14:powerpc (only quarterly is updated)
+* FreeBSD:14:powerpc64 (only quarterly is updated)
+* FreeBSD:14:powerpc64le (only quarterly is updated)
+
+|14.2-RELEASE + 3 months
 |main |n/a |main a|
 * FreeBSD:15:aarch64
 * FreeBSD:15:amd64
