--- a/website/content/en/releases/_index.adoc
+++ b/website/content/en/releases/_index.adoc
@@ -36,6 +36,7 @@ Production:
 * *Release {rel132-current}* ({rel132-current-date}) _link:{u-rel132-announce}[Announcement] : link:{u-rel132-notes}[Release Notes] : link:{u-rel132-installation}[Installation Instructions] : link:{u-rel132-hardware}[Hardware Compatibility List] : link:{u-rel132-readme}[Readme] : link:{u-rel132-errata}[Errata] : link:{u-rel132-signatures}[Signed Checksums]_
 * *Release {rel133-current}* ({rel133-current-date}) _link:{u-rel133-announce}[Announcement] : link:{u-rel133-notes}[Release Notes] : link:{u-rel133-installation}[Installation Instructions] : link:{u-rel133-hardware}[Hardware Compatibility List] : link:{u-rel133-readme}[Readme] : link:{u-rel133-errata}[Errata] : link:{u-rel133-signatures}[Signed Checksums]_
 * *Release {rel140-current}* ({rel140-current-date}) _link:{u-rel140-announce}[Announcement] : link:{u-rel140-notes}[Release Notes] : link:{u-rel140-installation}[Installation Instructions] : link:{u-rel140-hardware}[Hardware Compatibility List] : link:{u-rel140-readme}[Readme] : link:{u-rel140-errata}[Errata] : link:{u-rel140-signatures}[Signed Checksums]_
+* *Release {rel141-current}* ({rel141-current-date}) _link:{u-rel141-announce}[Announcement] : link:{u-rel141-notes}[Release Notes] : link:{u-rel141-installation}[Installation Instructions] : link:{u-rel141-hardware}[Hardware Compatibility List] : link:{u-rel141-readme}[Readme] : link:{u-rel141-errata}[Errata] : link:{u-rel141-signatures}[Signed Checksums]_
 
 ////
 === Legacy
