--- a/website/content/en/releases/14.1R/_index.adoc
+++ b/website/content/en/releases/14.1R/_index.adoc
@@ -20,9 +20,9 @@ More detailed information, such as release notes and hardware notes,
 can be found at these pages:
 
 link:signatures[FreeBSD {localRel}-RELEASE signed checksum files] +
-//link:installation[FreeBSD {localRel}-RELEASE installation information] +
+link:installation[FreeBSD {localRel}-RELEASE installation information] +
 link:hardware[FreeBSD {localRel}-RELEASE hardware information] +
 link:relnotes[FreeBSD {localRel}-RELEASE release notes] +
-//link:errata[FreeBSD {localRel}-RELEASE errata] +
-//link:readme[FreeBSD {localRel}-RELEASE readme] +
+link:errata[FreeBSD {localRel}-RELEASE errata] +
+link:readme[FreeBSD {localRel}-RELEASE readme] +
 link:schedule[FreeBSD {localRel}-RELEASE schedule]
