--- a/website/content/en/releases/14.1R/announce.adoc
+++ b/website/content/en/releases/14.1R/announce.adoc
@@ -7,7 +7,7 @@ sidenav: download
 :thisRelease: 14.1
 :nextRelease: 14.2
 :lastRelease: 14.0
-:thisEOL: January 31, 2026
+:thisEOL: November 30, 2028
 :which: second
 
 include::shared/releases.adoc[]
@@ -226,7 +226,7 @@ For instructions on installing FreeBSD or updating an existing machine to {thisR
 
 == Support
 
-Based on the new FreeBSD support model, the FreeBSD {thisBranch} release series will be supported until at least {thisEOL}. This point release, FreeBSD {thisRelease}-RELEASE, will be supported until at least three months after FreeBSD {nextRelease}-RELEASE. Additional support information can be found at:
+Based on the FreeBSD support model, the FreeBSD {thisBranch} release series will be supported until at least {thisEOL}. This point release, FreeBSD {thisRelease}-RELEASE, will be supported until at least three months after FreeBSD {nextRelease}-RELEASE. Additional support information can be found at:
 
 * `https://www.FreeBSD.org/security/`
 
