--- a/website/content/en/releases/14.1R/announce.adoc
+++ b/website/content/en/releases/14.1R/announce.adoc
@@ -17,17 +17,16 @@ include::shared/releases.adoc[]
 
 Date: {thisDate}
 
-The FreeBSD Release Engineering Team is pleased to announce the availability of FreeBSD {thisRelease}-RELEASE. This is the {which} release of the stable/{thisBranch} branch.
+The FreeBSD Release Engineering Team is pleased to announce the availability of FreeBSD {thisRelease}-RELEASE.
+This is the {which} release of the stable/{thisBranch} branch.
 
 Some of the highlights:
 
-* The C library now has SIMD implementations of string and memory operations
-on amd64 for improved performance.
+* The C library now has SIMD implementations of string and memory operations on amd64 for improved performance.
 
 * Improvements to the sound subsystem, including device hotplug.
 
-* Initial native cloud-init (configuration drive) support compatible with
-OpenStack and many hosters.
+* Initial native cloud-init (configuration drive) support compatible with OpenStack and many hosters.
 
 * OpenZFS has been upgraded to version 2.2.4.
 
@@ -48,7 +47,9 @@ For more information about FreeBSD release engineering activities, please see:
 
 FreeBSD {thisRelease}-RELEASE is now available for the amd64, i386, powerpc, powerpc64, powerpc64le, powerpcspe, armv7, aarch64, and riscv64 architectures.
 
-FreeBSD {thisRelease}-RELEASE can be installed from bootable ISO images or over the network. Some architectures also support installing from a USB memory stick. The required files can be downloaded as described in the section below.
+FreeBSD {thisRelease}-RELEASE can be installed from bootable ISO images or over the network.
+Some architectures also support installing from a USB memory stick.
+The required files can be downloaded as described in the section below.
 
 SHA512 and SHA256 hashes for the release ISO, memory stick, and SD card images are included at the bottom of this message.
 
@@ -63,9 +64,12 @@ A PGP-signed version of this announcement is available at:
 The purpose of the images provided as part of the release are as follows:
 
 dvd1::
-This contains everything necessary to install the base FreeBSD operating system, the documentation, debugging distribution sets, and a small set of pre-built packages aimed at getting a graphical workstation up and running. It also supports booting into a "livefs" based rescue mode. This should be all you need if you can burn and use DVD-sized media.
+This contains everything necessary to install the base FreeBSD operating system, the documentation, debugging distribution sets, and a small set of pre-built packages aimed at getting a graphical workstation up and running.
+It also supports booting into a "livefs" based rescue mode.
+This should be all you need if you can burn and use DVD-sized media.
 +
-Additionally, this can be written to a USB memory stick (flash drive) for the amd64 architecture and used to do an install on machines capable of booting off USB drives. It also supports booting into a "livefs" based rescue mode.
+Additionally, this can be written to a USB memory stick (flash drive) for the amd64 architecture and used to do an install on machines capable of booting off USB drives.
+It also supports booting into a "livefs" based rescue mode.
 +
 As one example of how to use the memstick image, assuming the USB drive appears as /dev/da0 on your machine something like this should work:
 +
@@ -77,9 +81,12 @@ As one example of how to use the memstick image, assuming the USB drive appears 
 +
 Be careful to make sure you get the target (of=) correct.
 disc1::
-This contains the base FreeBSD operating system. It also supports booting into a "livefs" based rescue mode. There are no pre-built packages.
+This contains the base FreeBSD operating system. It also supports booting into a "livefs" based rescue mode.
+There are no pre-built packages.
 +
-Additionally, this can be written to a USB memory stick (flash drive) for the amd64 architecture and used to do an install on machines capable of booting off USB drives. It also supports booting into a "livefs" based rescue mode. There are no pre-built packages.
+Additionally, this can be written to a USB memory stick (flash drive) for the amd64 architecture and used to do an install on machines capable of booting off USB drives.
+It also supports booting into a "livefs" based rescue mode.
+There are no pre-built packages.
 +
 As one example of how to use the memstick image, assuming the USB drive appears as /dev/da0 on your machine something like this should work:
 +
@@ -91,9 +98,12 @@ As one example of how to use the memstick image, assuming the USB drive appears 
 +
 Be careful to make sure you get the target (of=) correct.
 bootonly::
-This supports booting a machine using the CDROM drive but does not contain the installation distribution sets for installing FreeBSD from the CD itself. You would need to perform a network based install (e.g., from an HTTP or FTP server) after booting from the CD.
+This supports booting a machine using the CDROM drive but does not contain the installation distribution sets for installing FreeBSD from the CD itself.
+You would need to perform a network based install (e.g., from an HTTP or FTP server) after booting from the CD.
 +
-Additionally, this can be written to a USB memory stick (flash drive) for the amd64 architecture and used to do an install on machines capable of booting off USB drives. It also supports booting into a "livefs" based rescue mode. There are no pre-built packages.
+Additionally, this can be written to a USB memory stick (flash drive) for the amd64 architecture and used to do an install on machines capable of booting off USB drives.
+It also supports booting into a "livefs" based rescue mode.
+There are no pre-built packages.
 +
 As one example of how to use the memstick image, assuming the USB drive appears as /dev/da0 on your machine something like this should work:
 +
@@ -105,7 +115,9 @@ As one example of how to use the memstick image, assuming the USB drive appears 
 +
 Be careful to make sure you get the target (of=) correct.
 memstick::
-This can be written to a USB memory stick (flash drive) and used to do an install on machines capable of booting off USB drives. It also supports booting into a "livefs" based rescue mode. There are no pre-built packages.
+This can be written to a USB memory stick (flash drive) and used to do an install on machines capable of booting off USB drives.
+It also supports booting into a "livefs" based rescue mode.
+There are no pre-built packages.
 +
 As one example of how to use the memstick image, assuming the USB drive appears as /dev/da0 on your machine something like this should work:
 +
@@ -117,7 +129,9 @@ As one example of how to use the memstick image, assuming the USB drive appears 
 +
 Be careful to make sure you get the target (of=) correct.
 mini-memstick::
-This can be written to a USB memory stick (flash drive) and used to boot a machine, but does not contain the installation distribution sets on the medium itself, similar to the bootonly image. It also supports booting into a "livefs" based rescue mode. There are no pre-built packages.
+This can be written to a USB memory stick (flash drive) and used to boot a machine, but does not contain the installation distribution sets on the medium itself, similar to the bootonly image.
+It also supports booting into a "livefs" based rescue mode.
+There are no pre-built packages.
 +
 As one example of how to use the mini-memstick image, assuming the USB drive appears as /dev/da0 on your machine something like this should work:
 +
@@ -129,9 +143,11 @@ As one example of how to use the mini-memstick image, assuming the USB drive app
 +
 Be careful to make sure you get the target (of=) correct.
 FreeBSD/arm SD card images::
-These can be written to an SD card and used to boot the supported arm system. The SD card image contains the full FreeBSD installation, and can be installed onto SD cards as small as 5 GB.
+These can be written to an SD card and used to boot the supported arm system.
+The SD card image contains the full FreeBSD installation, and can be installed onto SD cards as small as 5 GB.
 +
-For convenience for those without console access to the system, a `freebsd` user with a password of `freebsd` is available by default for `ssh(1)` access. Additionally, the `root` user password is set to `root`, which it is strongly recommended to change the password for both users after gaining access to the system.
+For convenience for those without console access to the system, a `freebsd` user with a password of `freebsd` is available by default for `ssh(1)` access.
+Additionally, the `root` user password is set to `root`, which it is strongly recommended to change the password for both users after gaining access to the system.
 +
 To write the FreeBSD/arm image to an SD card, use the `dd(1)` utility, replacing _KERNEL_ with the appropriate kernel configuration name for the system.
 +
@@ -143,7 +159,8 @@ To write the FreeBSD/arm image to an SD card, use the `dd(1)` utility, replacing
 +
 Be careful to make sure you get the target (of=) correct.
 
-FreeBSD {thisRelease}-RELEASE can also be purchased on DVD from several vendors. One of the vendors that will be offering FreeBSD {thisRelease}-based products is:
+FreeBSD {thisRelease}-RELEASE can also be purchased on DVD from several vendors.
+One of the vendors that will be offering FreeBSD {thisRelease}-based products is:
 
 * FreeBSD Mall, Inc. https://www.freebsdmall.com
 
@@ -153,8 +170,7 @@ FreeBSD {thisRelease}-RELEASE amd64 is also available on these cloud hosting pla
 
 * FreeBSD/amd64 Amazon(R) EC2(TM): +
 
-FreeBSD/amd64 EC2 AMI IDs can be retrieved from the Systems Manager
-Parameter Store in each region using the keys:
+FreeBSD/amd64 EC2 AMI IDs can be retrieved from the Systems Manager Parameter Store in each region using the keys:
 
 	/aws/service/freebsd/amd64/base/ufs/14.1/RELEASE
 	/aws/service/freebsd/amd64/base/zfs/14.1/RELEASE
@@ -166,8 +182,7 @@ AMIs are also available in the AWS Marketplace at:
 	https://aws.amazon.com/marketplace/pp/prodview-sxzreyutwngxy (UFS)
 	https://aws.amazon.com/marketplace/pp/prodview-4csbncujmsgbk (ZFS)
 
-FreeBSD/aarch64 EC2 AMI IDs can be retrieved from the Systems Manager
-Parameter Store in each region using the keys:
+FreeBSD/aarch64 EC2 AMI IDs can be retrieved from the Systems Manager Parameter Store in each region using the keys:
 
 	/aws/service/freebsd/aarch64/base/ufs/14.1/RELEASE
 	/aws/service/freebsd/aarch64/base/zfs/14.1/RELEASE
@@ -194,8 +209,7 @@ FreeBSD {thisRelease}-RELEASE is also expected to be available in the Google Com
 https://console.cloud.google.com/marketplace/browse?filter=category:os&filter=price:free&q=freebsd
 
 * Microsoft(R) Azure(TM): +
-FreeBSD virtual machine images are expected to be available on the Azure
-Marketplace in the near future at: +
+FreeBSD virtual machine images are expected to be available on the Azure Marketplace in the near future at: +
 https://azuremarketplace.microsoft.com/marketplace/apps/thefreebsdfoundation.freebsd-14_1
 
 * Hashicorp/Atlas(R) Vagrant(TM): +
@@ -226,7 +240,9 @@ For instructions on installing FreeBSD or updating an existing machine to {thisR
 
 == Support
 
-Based on the FreeBSD support model, the FreeBSD {thisBranch} release series will be supported until at least {thisEOL}. This point release, FreeBSD {thisRelease}-RELEASE, will be supported until at least three months after FreeBSD {nextRelease}-RELEASE. Additional support information can be found at:
+Based on the FreeBSD support model, the FreeBSD {thisBranch} release series will be supported until at least {thisEOL}.
+This point release, FreeBSD {thisRelease}-RELEASE, will be supported until at least three months after FreeBSD {nextRelease}-RELEASE.
+Additional support information can be found at:
 
 * `https://www.FreeBSD.org/security/`
 
@@ -587,4 +603,5 @@ FreeBSD is a registered trademark of The FreeBSD Foundation.
   SHA256 (FreeBSD-14.1-RELEASE-amd64-BASIC-CI.raw.xz) = 202fe27a05427f0a86d3ebb97712745186f2776ccc4f70d95466dd99a0238ba5
 ....
 
-Love FreeBSD? Support this and future releases with a https://www.freebsdfoundation.org/donate/[donation] to The FreeBSD Foundation!
+Love FreeBSD?
+Support this and future releases with a https://www.freebsdfoundation.org/donate/[donation] to The FreeBSD Foundation!
