--- a/website/content/en/releases/14.1R/relnotes.adoc
+++ b/website/content/en/releases/14.1R/relnotes.adoc
@@ -328,7 +328,7 @@ This section covers changes to manual (man:man[1]) pages and other documentation
 [[man-pages]]
 === Man Pages
 
-A new man:network[7] manual page provides a quickstart guide to connecting the system to networks including Wi-Fi, and links to other manual pages and the handbook.
+A new man:networking[7] manual page provides a quickstart guide to connecting the system to networks including Wi-Fi, and links to other manual pages and the handbook.
 gitref:39f92a4c4c49[repository=src]
 
 [[future-releases]]
