releng: 14.1 is no longer upcoming

--- a/website/content/en/releng/_index.adoc
+++ b/website/content/en/releng/_index.adoc
@@ -24,17 +24,18 @@ General information about committing to -STABLE.
 [[schedule]]
 == Upcoming Release Schedule
 
-Note: Release dates are approximate and may be subject to schedule slippage.
+//Note: Release dates are approximate and may be subject to schedule slippage.
 
-//As of 2023-11-24, the next release has not yet been announced.
+As of 2024-06-04, the next release has not yet been announced.
+////
 
 [.tblbasic]
 [cols=",,",options="header",]
 |===
 |Date |Event |Information
-|June 2024 |FreeBSD 14.1 |link:../releases/14.1R/schedule/[Target Schedule]
+|Month YYYY |FreeBSD 13.4 |link:../releases/13.4R/schedule/[Target Schedule]
 |===
-
+////
 [[freeze]]
 == Code-Freeze Status
 
