handbook/wine: minor wordsmithing
Instead of relying on an implied direct object for the transitive
verb "enbables", use the non-transitive form of "allows" that reads
more naturally.

--- a/documentation/content/en/books/handbook/wine/_index.adoc
+++ b/documentation/content/en/books/handbook/wine/_index.adoc
@@ -52,7 +52,7 @@ endif::[]
 == Synopsis
 
 https://www.winehq.org/[WINE], which stands for Wine Is Not an Emulator, is technically a software translation layer.
-It enables to install and run software written for Windows(R) on FreeBSD (and other) systems.
+It allows installing and running software written for Windows(R) on FreeBSD (and other) systems.
 
 It operates by intercepting system calls, or requests from the software to the operating system, and translating them from Windows(R) calls to calls that FreeBSD understands.
 It will also translate any responses as needed into what the Windows(R) software is expecting.
