releng: begin reducing verbosity
Reduce repetition. (No need to use the word 'table' above and below what's obviously a table; and so on.)

--- a/website/content/en/releng/_index.adoc
+++ b/website/content/en/releng/_index.adoc
@@ -39,12 +39,12 @@ As of 2024-06-04, the next release has not yet been announced.
 [[freeze]]
 == Code-Freeze Status
 
-This table lists the code freeze status for major branches of the `src/` repository of the FreeBSD Git repositories. Commits to any branch listed as "frozen" must first be reviewed and approved by the relevant contact party. The status of other repositories such as `ports/` and `doc/` is also provided below.
+Commits to any branch listed as "frozen" must first be reviewed and approved by the relevant contact party. 
 
 [.tblbasic]
 [cols="1,1,2,4",options="header",]
 |===
-|Branch |Status |Contact |Notes
+|`src` tree branch |Status |Contact |Notes
 |`main` |Open |committers |Active development branch for 15.0-CURRENT.
 |`stable/14` |Open |committers |Development branch for FreeBSD 14-STABLE.
 |`releng/14.1` |Frozen |re@FreeBSD.org |FreeBSD 14.1 supported errata fix branch.
@@ -66,12 +66,12 @@ This table lists the code freeze status for major branches of the `src/` reposit
 |`releng/11.2` |Frozen |security-officer@FreeBSD.org |FreeBSD 11.2 errata fix branch (not officially supported).
 |`releng/11.1` |Frozen |security-officer@FreeBSD.org |FreeBSD 11.1 errata fix branch (not officially supported).
 |`releng/11.0` |Frozen |security-officer@FreeBSD.org |FreeBSD 11.0 errata fix branch (not officially supported).
-|*Repository* |*Status* |*Contact* |*Notes*
+|*Tree* |*Status* |*Contact* |*Notes*
 |`ports/` |Open |portmgr@FreeBSD.org |FreeBSD Ports Collection.
 |`doc/` |Open |freebsd-doc@FreeBSD.org |ASCIIDoc-based documentation set.
 |===
 
-(Branches corresponding to FreeBSD 10.x and earlier are of historical interest only, and are omitted from the table above.)
+Historic `src` branches corresponding to FreeBSD 10.x and earlier are not represented above.
 
 [[docs]]
 == Release Engineering Documentation
