releng: Code Freeze Status, non-hyphenated
Consistency.

--- a/website/content/en/releng/_index.adoc
+++ b/website/content/en/releng/_index.adoc
@@ -37,7 +37,7 @@ As of 2024-06-04, the next release has not yet been announced.
 |===
 ////
 [[freeze]]
-== Code-Freeze Status
+== Code Freeze Status
 
 Commits to any branch listed as "frozen" must first be reviewed and approved by the relevant contact party. 
 
