--- a/website/content/en/releng/_index.adoc
+++ b/website/content/en/releng/_index.adoc
@@ -93,6 +93,6 @@ The third party packages in the Ports Collection are managed by the pkgmgr@ team
 [[old]]
 == Old Releases
 
-The FreeBSD Project does not maintain a complete archive of old release ISO images, but many of them are available at ftp://ftp-archive.FreeBSD.org/pub/FreeBSD-Archive/old-releases/.
+The FreeBSD Project does not maintain a complete archive of old release ISO images, but many of them are available at http://ftp-archive.freebsd.org/pub/FreeBSD-Archive/old-releases/[].
 
 Older releases that are no longer present on any FTP mirror might still be available from CD-ROM vendors.
