--- a/website/content/en/releng/_index.adoc
+++ b/website/content/en/releng/_index.adoc
@@ -8,13 +8,13 @@ include::shared/en/urls.adoc[]
 
 = Release Engineering Information
 
-This page contains documentation about the FreeBSD release engineering process.
+About the FreeBSD release engineering (RE) process.
 
 * <<schedule,Upcoming Release Schedule>>
 * <<freeze,Code Freeze Status>>
 * link:../releng/charter/[Charter for the Release Engineering Team]
 * <<docs,Release Engineering Documentation>>
-* <<team,Current Release Engineering Team>>
+* <<team,Teams>>
 * <<old,Old Releases>>
 
 ////
@@ -80,9 +80,9 @@ Historic `src` branches corresponding to FreeBSD 10.x and earlier are not repres
 This document details the approach used by the FreeBSD release engineering team to make production-quality releases of the FreeBSD Operating System. It describes the tools available for those interested in producing customized FreeBSD releases for corporate rollouts or commercial productization.
 
 [[team]]
-== Release Engineering Team
+== Teams
 
-The primary release engineering team is responsible for approving link:{handbook}glossary/#mfc-glossary[MFC] requests during code freezes, setting release schedules, and all of the other responsibilities laid out in our link:../releng/charter/[charter].
+The Primary Release Engineering Team is responsible for approving link:{handbook}glossary/#mfc-glossary[MFC] requests during code freezes, setting release schedules, and all of the other responsibilities laid out in its link:../releng/charter/[charter].
 
 *Primary RE Team (re@FreeBSD.org)* : {re-members} form the primary release engineering decision-making group.
 
