--- a/website/content/en/releng/_index.adoc
+++ b/website/content/en/releng/_index.adoc
@@ -13,7 +13,7 @@ About the FreeBSD release engineering (RE) process.
 * <<schedule,Upcoming Release Schedule>>
 * <<freeze,Code Freeze Status>>
 * link:../releng/charter/[Charter for the Release Engineering Team]
-* <<docs,Release Engineering Documentation>>
+* <<docs,Documentation>>
 * <<team,Teams>>
 * <<old,Old Releases>>
 
@@ -74,10 +74,12 @@ Commits to any branch listed as "frozen" must first be reviewed and approved by 
 Historic `src` branches corresponding to FreeBSD 10.x and earlier are not represented above.
 
 [[docs]]
-== Release Engineering Documentation
+== Documentation
 
-* link:{freebsd-releng}[FreeBSD Release Engineering] +
-This document details the approach used by the FreeBSD release engineering team to make production-quality releases of the FreeBSD Operating System. It describes the tools available for those interested in producing customized FreeBSD releases for corporate rollouts or commercial productization.
+link:{freebsd-releng}[FreeBSD Release Engineering] describes: 
+
+- the Primary Release Engineering Team's methods
+- tools to customize releases.
 
 [[team]]
 == Teams
