releng: src tree branch: nonbreaking spaces
Tidiness for the table header.

--- a/website/content/en/releng/_index.adoc
+++ b/website/content/en/releng/_index.adoc
@@ -44,7 +44,7 @@ Commits to any branch listed as "frozen" must first be reviewed and approved by 
 [.tblbasic]
 [cols="1,1,2,4",options="header",]
 |===
-|`src` tree branch |Status |Contact |Notes
+|`src`&nbsp;tree&nbsp;branch |Status |Contact |Notes
 |`main` |Open |committers |Active development branch for 15.0-CURRENT.
 |`stable/14` |Open |committers |Development branch for FreeBSD 14-STABLE.
 |`releng/14.1` |Frozen |re@FreeBSD.org |FreeBSD 14.1 supported errata fix branch.
