releng: Development branch
No need to state that a development branch is active.

--- a/website/content/en/releng/_index.adoc
+++ b/website/content/en/releng/_index.adoc
@@ -45,7 +45,7 @@ Commits to any branch listed as "frozen" must first be reviewed and approved by 
 [cols="1,1,2,4",options="header",]
 |===
 |`src`&nbsp;tree&nbsp;branch |Status |Contact |Notes
-|`main` |Open |committers |Active development branch for 15.0-CURRENT.
+|`main` |Open |committers |Development branch for 15.0-CURRENT.
 |`stable/14` |Open |committers |Development branch for FreeBSD 14-STABLE.
 |`releng/14.1` |Frozen |re@FreeBSD.org |FreeBSD 14.1 supported errata fix branch.
 |`releng/14.0` |Frozen |security-officer@FreeBSD.org |FreeBSD 14.0 supported errata fix branch.
