releng: move the prior approval line
Below the table, and less verbose.

--- a/website/content/en/releng/_index.adoc
+++ b/website/content/en/releng/_index.adoc
@@ -39,8 +39,6 @@ As of 2024-06-04, the next release has not yet been announced.
 [[freeze]]
 == Code Freeze Status
 
-Commits to any branch listed as "frozen" must first be reviewed and approved by the relevant contact party. 
-
 [.tblbasic]
 [cols="1,1,2,4",options="header",]
 |===
@@ -71,7 +69,9 @@ Commits to any branch listed as "frozen" must first be reviewed and approved by 
 |`doc/` |Open |freebsd-doc@FreeBSD.org |ASCIIDoc-based documentation set.
 |===
 
-Historic `src` branches corresponding to FreeBSD 10.x and earlier are not represented above.
+Commits to frozen branches require prior approval.
+
+Historic branches for FreeBSD 10.x and earlier are not represented above.
 
 [[docs]]
 == Documentation
