releng: doc, AsciiDoc, ports,
Alphabetical order.

AsciiDoc, not ASCIIDoc.

--- a/website/content/en/releng/_index.adoc
+++ b/website/content/en/releng/_index.adoc
@@ -65,8 +65,8 @@ As of 2024-06-04, the next release has not yet been announced.
 |`releng/11.1` |Frozen |security-officer@FreeBSD.org |FreeBSD 11.1 errata fix branch (not officially supported).
 |`releng/11.0` |Frozen |security-officer@FreeBSD.org |FreeBSD 11.0 errata fix branch (not officially supported).
 |*Tree* |*Status* |*Contact* |*Notes*
+|`doc/` |Open |freebsd-doc@FreeBSD.org |AsciiDoc-based documentation set.
 |`ports/` |Open |portmgr@FreeBSD.org |FreeBSD Ports Collection.
-|`doc/` |Open |freebsd-doc@FreeBSD.org |ASCIIDoc-based documentation set.
 |===
 
 Commits to frozen branches require prior approval.
