shared/authors.adoc: R.I.P. Mike Karels

--- a/shared/authors.adoc
+++ b/shared/authors.adoc
@@ -1789,8 +1789,8 @@
 :kan: {kan-name} <{kan-email}>
 
 :karels-name: Mike Karels
-:karels-email: karels@FreeBSD.org
-:karels: {karels-name} <{karels-email}>
+:karels-email: 
+:karels: {karels-name}
 
 :kargl-name: Steven G. Kargl
 :kargl-email: kargl@FreeBSD.org
@@ -3751,8 +3751,8 @@
 
 // FreeBSD Release Engineering Teams
 :re: re@FreeBSD.org
-:re-members: {kib}, {blackend}, {karels}, {delphij}, {cperciva}
-:re-members-email: {kib-email}, {blackend-email}, {karels-email}, {delphij-email}, {cperciva-email}
+:re-members: {kib}, {blackend}, {delphij}, {cperciva}
+:re-members-email: {kib-email}, {blackend-email}, {delphij-email}, {cperciva-email}
 :re-builders: {marcel}, {nyan}, {nwhitehorn}
 
 // FreeBSD Security Officer
