[website]: Remove gjb@ from doceng-members
So it is not listed in https://www.freebsd.org/internal/doceng/
While here, list members alphabetically.

--- a/shared/authors.adoc
+++ b/shared/authors.adoc
@@ -3734,7 +3734,7 @@
 :core-secretary-email: core-secretary@FreeBSD.org
 
 // FreeBSD Doc Engineering Team
-:doceng-members: {gjb}, {carlavilla}, {blackend}, {dbaio}, {bcr}, {hrs}, {fernape}
+:doceng-members: {bcr}, {blackend}, {dbaio}, {fernape}, {hrs}, {carlavilla}
 :doceng-secretary-email: <doceng-secretary@FreeBSD.org>
 
 // FreeBSD Donations Liaison
