add my pgp key back to pgpkeys article

--- a/documentation/content/en/articles/pgpkeys/_index.adoc
+++ b/documentation/content/en/articles/pgpkeys/_index.adoc
@@ -333,6 +333,9 @@ include::{include-path}alc.key[]
 === `{olivier}`
 include::{include-path}olivier.key[]
 
+=== `{dch}`
+include::{include-path}dch.key[]
+
 === `{bcran}`
 include::{include-path}bcran.key[]
 
