handbook: replace dead link for lprng
www.lprng.com is a dead link - update to https://lprng.sourceforge.net/.

PR:		279549
Event:		Kitchener-Waterloo Hackathon 202406
Sponsored by:	The FreeBSD Foundation

--- a/documentation/content/de/books/handbook/printing/_index.adoc
+++ b/documentation/content/de/books/handbook/printing/_index.adoc
@@ -728,4 +728,4 @@ Hewlett Packard stellt ein Drucksystem zur Verfügung, das viele ihrer Drucker u
 [[printing-other-lprng]]
 === LPRng
 
-LPRng wurde als eine verbesserte Alternative zu man:lpd[8] entwickelt. Der Port heißt package:sysutils/LPRng[]. Weitere Informationen und Dokumentation finden Sie unter http://www.lprng.com/[].
+LPRng wurde als eine verbesserte Alternative zu man:lpd[8] entwickelt. Der Port heißt package:sysutils/LPRng[]. Weitere Informationen und Dokumentation finden Sie unter https://lprng.sourceforge.net/[].
