--- a/documentation/content/en/books/handbook/printing/_index.adoc
+++ b/documentation/content/en/books/handbook/printing/_index.adoc
@@ -893,4 +893,4 @@ Configuration information is shown at https://developers.hp.com/hp-linux-imaging
 
 LPRng was developed as an enhanced alternative to man:lpd[8].
 The port is package:sysutils/LPRng[].
-For details and documentation, see http://www.lprng.com/[].
+For details and documentation, see https://lprng.sourceforge.net/[].
