--- a/documentation/content/pt-br/books/handbook/printing/_index.adoc
+++ b/documentation/content/pt-br/books/handbook/printing/_index.adoc
@@ -747,4 +747,4 @@ A Hewlett Packard fornece um sistema de impressão que suporta muitas de suas im
 [[printing-other-lprng]]
 === LPRng
 
-O LPRng foi desenvolvido como uma alternativa aprimorada para o man:lpd[8]. O port é package:sysutils/LPRng[]. Para detalhes e documentação, veja http://www.lprng.com/[].
+O LPRng foi desenvolvido como uma alternativa aprimorada para o man:lpd[8]. O port é package:sysutils/LPRng[]. Para detalhes e documentação, veja https://lprng.sourceforge.net/[].
