--- a/documentation/content/zh-tw/books/handbook/printing/_index.adoc
+++ b/documentation/content/zh-tw/books/handbook/printing/_index.adoc
@@ -748,4 +748,4 @@ Hewlett Packard provides a printing system that supports many of their inkjet an
 [[printing-other-lprng]]
 === LPRng
 
-LPRng was developed as an enhanced alternative to man:lpd[8]. The port is package:sysutils/LPRng[]. For details and documentation, see http://www.lprng.com/[].
+LPRng was developed as an enhanced alternative to man:lpd[8]. The port is package:sysutils/LPRng[]. For details and documentation, see https://lprng.sourceforge.net/[].
