Update release engineering team membership
Remove the late Mike Karels.  Ed Maste will be replacing him as Release
Engineering Deputy Lead.

Add new team members: Dave Cottlehuber, John Hixson, Mahdi Mokhtari, Doug
Rabson, Muhammad Moinur Rahman.

While I'm here, remove the re-builders list, which has been defunct for
a few years.

--- a/shared/authors.adoc
+++ b/shared/authors.adoc
@@ -3751,9 +3751,8 @@
 
 // FreeBSD Release Engineering Teams
 :re: re@FreeBSD.org
-:re-members: {kib}, {blackend}, {karels}, {delphij}, {cperciva}
-:re-members-email: {kib-email}, {blackend-email}, {karels-email}, {delphij-email}, {cperciva-email}
-:re-builders: {marcel}, {nyan}, {nwhitehorn}
+:re-members: {kib}, {dch}, {blackend}, {jhixson}, {delphij}, {emaste}, {mmokhi}, {cperciva}, {dfr}, {bofh}
+:re-members-email: {kib-email}, {dch-email}, {blackend-email}, {jhixson-email}, {delphij-email}, {emaste-email}, {mmokhi-email}, {cperciva-email}, {dfr-email}, {bofh-email}
 
 // FreeBSD Security Officer
 :so: {gordon}
