--- a/website/content/en/administration.adoc
+++ b/website/content/en/administration.adoc
@@ -125,10 +125,15 @@ The Primary Release Engineering Team is responsible for setting and publishing r
 The https://www.freebsd.org/releng/charter/[release engineering team charter] describes the duties and responsibilities of the Primary Release Engineering Team in greater detail.
 
 * {kib}
+* {dch}
 * {blackend}
-* {karels} (Deputy Lead)
+* {jhixson}
 * {delphij}
+* {emaste} (Deputy Lead)
+* {mmokhi}
 * {cperciva} (Lead)
+* {dfr}
+* {bofh}
 
 [[t-donations]]
 == Donations Team <donations@FreeBSD.org>
