--- a/website/content/en/releases/14.1R/schedule.adoc
+++ b/website/content/en/releases/14.1R/schedule.adoc
@@ -40,7 +40,7 @@ General discussions about the pending release and known issues should be sent to
 |RC1 builds begin |24 May 2024 |25 May 2024 |Release candidate.
 |RELEASE builds begin |31 May 2024 |31 May 2024 |{localRel}-RELEASE builds begin.
 |RELEASE announcement |4 June 2024 |4 June 2024 |{localRel}-RELEASE press release.
-|Turn over to the secteam |- |- |{localBranchReleng} branch is handed over to the FreeBSD Security Officer Team in one or two weeks after the announcement.
+|Turn over to the secteam |11 June 2024 |11 June 2024 |{localBranchReleng} branch is handed over to the FreeBSD Security Officer Team in one or two weeks after the announcement.
 |===
 ////
 
