website/news/newsflash: Fix GNOME link
Previously, it was being redirected through nginx.

--- a/website/content/en/news/newsflash.adoc
+++ b/website/content/en/news/newsflash.adoc
@@ -14,7 +14,7 @@ FreeBSD is a rapidly developing operating system. Keeping up on the latest devel
 The following projects have their own news pages, which should be checked for project specific updates.
 
 * https://freebsd.kde.org/[KDE on FreeBSD]
-* link:../../gnome[GNOME on FreeBSD]
+* link:../../gnome/[GNOME on FreeBSD]
 
 For a detailed description of past, present, and future releases, see the link:../../releases[Release Information page].
 
