--- a/website/content/en/administration.adoc
+++ b/website/content/en/administration.adoc
@@ -57,15 +57,14 @@ This page lists teams, groups and individuals within the FreeBSD project with de
 The FreeBSD Core Team constitutes the project's "Board of Directors", responsible for deciding the project's overall goals and direction as well as managing specific areas of the FreeBSD project landscape.
 The Core Team is elected by the active developers in the project.
 
-* {bapt} (Security Team Liaison)
-* {bcr} (Foundation Liaison)
-* {emaste} (Release Engineering Team Liaison)
-* {grog}
-* {jhb} (CI Team Liaison)
-* {lwhsu} (Documentation Engineering Team Liaison)
-* {manu} (Ports Management Team Liaison)
-* {tcberner} (Cluster Administrators Team Liaison)
-* {0mp} (Bugmeister Team Liaison)
+* {allanjude}
+* {dch}
+* {glebius}
+* {hrs}
+* {lwhsu}
+* {mat}
+* {olivier}
+* {tcberner}
 
 [[t-doceng]]
 == FreeBSD Documentation Engineering Team <doceng@FreeBSD.org>
