--- a/website/content/en/status/report-2024-04-2024-06/pot.adoc
+++ b/website/content/en/status/report-2024-04-2024-06/pot.adoc
@@ -14,7 +14,7 @@ During this quarter, there were no new link:https://github.com/bsdpot/pot[Pot] r
 
 Potluck images saw some updates again though.
 All images have been rebuilt for the new quarterly packages, a new link:https://github.com/bsdpot/potluck/tree/master/opensearch[Opensearch] container has been added.
-Additionally additional features, updates and fixes have been committed to containers like link:https://github.com/bsdpot/potluck/tree/master/postgresql-patroni[PostgreSQL-Patroni] or link:https://github.com/bsdpot/potluck/tree/master/nomad-server-tls[Nomad-Server-TLS].
+Additional features, updates and fixes have been committed to containers like link:https://github.com/bsdpot/potluck/tree/master/postgresql-patroni[PostgreSQL-Patroni] or link:https://github.com/bsdpot/potluck/tree/master/nomad-server-tls[Nomad-Server-TLS].
 
 In total, there are 58 container images and templates available now.
 
