KDE: adapt to Jason's review

--- a/website/content/en/status/report-2024-04-2024-06/kde.adoc
+++ b/website/content/en/status/report-2024-04-2024-06/kde.adoc
@@ -17,12 +17,12 @@ The latest software is still not available on FreeBSD, pending more testing and 
 
 ==== Infrastructure
 
-CMake was updated several times and is now version 3.29.5, nearly the latest upstream release.
+CMake was updated several times and is now version 3.29.6, the latest upstream release.
 CMake in the ports framework now supports setting parallel-build for tests.
 
 Qt5 is now on long-term support and updates only rarely. An update to 5.15.14 and WebEngine to 5.15.17 was landed in May.
 
-Qt6 and the Python bindings for Qt, Pyside, were updated to version 6.7.1.
+Qt6 and the Python bindings for Qt, Pyside, were updated to version 6.7.2.
 
 ==== KDE Stack
 
