platforms/i386: report Pentium Pro as minimum supported x86 processor
As of FreeBSD 13.0[1] we default to i686 for 32-bit x86, and the
compiler will make use of the CMOV instruction.

It is still possible to compile FreeBSD/i386 for i486 or i586, but the
release artifacts are i686 and we don't regularly build or test i486 or
i586, and it may well be broken.

[1] https://www.freebsd.org/releases/13.0R/relnotes/

Reviewed by:	imp
Sponsored by:	The FreeBSD Foundation
Differential Revision: https://reviews.freebsd.org/D45734

--- a/website/content/en/platforms/i386.adoc
+++ b/website/content/en/platforms/i386.adoc
@@ -10,7 +10,7 @@ include::shared/en/urls.adoc[]
 [[intro]]
 == Introduction
 
-This page contains information about the FreeBSD/i386 platform. FreeBSD/i386 should support any CPU compatible with the Intel(T) 80486 or better in 32-bit mode, although almost every recent AMD(T) and Intel(T) CPU will also be capable of running in 64-bit mode using the link:../amd64/[FreeBSD/amd64] port.
+This page contains information about the FreeBSD/i386 platform. FreeBSD/i386 should support any CPU compatible with the Intel Pentium Pro / Pentium II (i686) or better. Contemporary AMD and Intel CPUs should run in 64-bit mode using the link:../amd64/[FreeBSD/amd64] port instead.
 
 FreeBSD/i386 supports up to 4GiB of RAM by default. Machines with more RAM will either need to run link:../amd64/[FreeBSD/amd64] or run with link:{faq}#memory-i386-over-4gb[Physical Address Extension (PAE)] enabled in order to make use of any memory above the 4GiB boundary.
 
