platforms/i386: remove reference to 12.x tier status
FreeBSD was Tier-1 up to 12.x, Tier-2 as of 13.0.  As 12.x is now EOL we
can remove the reference.

Sponsored by:	The FreeBSD Foundation

--- a/website/content/en/platforms/i386.adoc
+++ b/website/content/en/platforms/i386.adoc
@@ -18,5 +18,4 @@ FreeBSD/i386 supports up to 4GiB of RAM by default. Machines with more RAM will 
 
 FreeBSD/i386 runs in 32-bit multiuser mode, in both Uniprocessor and Multiprocessor mode.
 
-The i386 platform is a link:{committers-guide}#archs[Tier 1] FreeBSD platform through FreeBSD 12.x.
-It is a link:{committers-guide}#archs[Tier 2] platform in FreeBSD 13.0 and later.
+The i386 platform is a link:{committers-guide}#archs[Tier 2] platform in FreeBSD 13.0 and later.
