--- a/website/content/en/releases/13.4R/errata.adoc
+++ b/website/content/en/releases/13.4R/errata.adoc
@@ -1,11 +1,11 @@
 ---
-title: "FreeBSD X.0-RELEASE Errata"
+title: "FreeBSD 13.4-RELEASE Errata"
 sidenav: download
 ---
 
-:release: X.0-RELEASE
-:releaseNext: X.1-RELEASE
-:releaseBranch: X-STABLE
+:release: 13.4-RELEASE
+:releaseNext: 13.5-RELEASE
+:releaseBranch: 13-STABLE
 
 = FreeBSD {release} Errata
 
