--- a/website/content/en/releases/13.4R/readme.adoc
+++ b/website/content/en/releases/13.4R/readme.adoc
@@ -1,13 +1,13 @@
 ---
-title: "FreeBSD X.0-RELEASE README"
+title: "FreeBSD 13.4-RELEASE README"
 sidenav: download
 ---
 
-:releaseCurrent: X.0-RELEASE
+:releaseCurrent: 13.4-RELEASE
 :releaseType: release
-:releaseBranch: X-STABLE
-:releasePrevStable: X.Y-RELEASE
-:releasePrev: X.Y-RELEASE
+:releaseBranch: 13-STABLE
+:releasePrevStable: 13.3-RELEASE
+:releasePrev: 13.3-RELEASE
 
 include::shared/releases.adoc[]
 include::shared/en/urls.adoc[]
