--- a/website/content/en/releases/13.4R/relnotes.adoc
+++ b/website/content/en/releases/13.4R/relnotes.adoc
@@ -1,10 +1,10 @@
 ---
-title: "FreeBSD X.0-RELEASE Release Notes"
+title: "FreeBSD 13.4-RELEASE Release Notes"
 sidenav: download
 ---
 
-:releaseCurrent: X.0-RELEASE
-:releaseBranch: X-STABLE
+:releaseCurrent: 13.4-RELEASE
+:releaseBranch: 13-STABLE
 :releasePrev: X.Y-RELEASE
 :releaseNext: X.Y-RELEASE
 :releaseType: "release"
@@ -174,7 +174,7 @@ This section describes changes that affect networking in FreeBSD.
 
 This section covers general hardware support for physical machines, hypervisors, and virtualization environments, as well as hardware changes and updates that do not otherwise fit in other sections of this document.
 
-Please see link:https://www.freebsd.org/releases/X.0R/hardware[the list of hardware] supported by {releaseCurrent}, as well as link:https://www.freebsd.org/platforms/[the platforms page] for the complete list of supported CPU architectures.
+Please see link:https://www.freebsd.org/releases/13.4R/hardware[the list of hardware] supported by {releaseCurrent}, as well as link:https://www.freebsd.org/platforms/[the platforms page] for the complete list of supported CPU architectures.
 
 [[hardware-virtualization]]
 === Virtualization Support
