--- a/website/content/en/releases/13.4R/schedule.adoc
+++ b/website/content/en/releases/13.4R/schedule.adoc
@@ -16,7 +16,7 @@ include::shared/en/urls.adoc[]
 This is the release schedule for FreeBSD {localRel}.
 For more information about the release engineering process, please see the link:../../../releng/[Release Engineering] section of the web site.
 
-General discussions about the pending release and known issues should be sent to the public mailto:FreeBSD-current@FreeBSD.org[freebsd-current] mailing list.
+General discussions about the pending release and known issues should be sent to the public mailto:FreeBSD-stable@FreeBSD.org[freebsd-stable] mailing list.
 
 // link:{handbook}glossary/#mfc-glossary[MFC] requests should be sent to link:mailto:re@FreeBSD.org[re@FreeBSD.org] following the link:https://wiki.freebsd.org/Releng/ChangeRequestGuidelines[Change Request Guidelines].
 
@@ -26,16 +26,20 @@ General discussions about the pending release and known issues should be sent to
 
 == Schedule
 
-During the {localBranchHead} freeze, the Release Engineering Team may create ALPHA snapshots to publish for testing purposes.
-As the frequency and total number of the ALPHA snapshots will depend on the length of time the {localBranchHead} branch is frozen, no official schedule is provided.
-
-Announcements regarding the availability of the ALPHA snapshots will be sent to the mailto:freebsd-current@FreeBSD.org[freebsd-current] and mailto:freebsd-snapshots@FreeBSD.org[freebsd-snapshots] mailing lists.
-
 [.tblbasic]
 [cols=",,,",options="header",]
 |===
 |Action |Expected |Actual |Description
-
+|Initial release schedule announcement |- |25 June 2024|Release Engineers send announcement email to developers with a rough schedule.
+|Release schedule reminder |8 July 2024 |- |Release Engineers send reminder announcement e-mail to developers with updated schedule.
+|Code slush begins |19 July 2024 |- |Release Engineers announce that all further commits to the {localBranchStable} branch will not require explicit approval, however new features should be avoided.
+|{localBranchReleng} branch |2 August 2024 |- |{localBranchReleng} branch created; future release engineering proceeds on this branch.
+|BETA1 builds begin |2 August 2024 |- |First beta test snapshot.
+|BETA2 builds begin |9 August 2024 |- |Second beta test snapshot.
+|BETA3 builds begin |16 August 2024 |- |Third beta test snapshot.
+|RC1 builds begin |23 August 2024 |- |First release candidate.
+|RELEASE builds begin |30 August 2024 |- |{localRel}-RELEASE builds begin.
+|RELEASE announcement |3 September 2024 |- |{localRel}-RELEASE press release.
 |===
 
 "*" indicates "as-needed" items.
