--- a/website/content/en/releng/_index.adoc
+++ b/website/content/en/releng/_index.adoc
@@ -26,16 +26,15 @@ General information about committing to -STABLE.
 
 //Note: Release dates are approximate and may be subject to schedule slippage.
 
-As of 2024-06-04, the next release has not yet been announced.
-////
+//As of 2024-06-04, the next release has not yet been announced.
 
 [.tblbasic]
 [cols=",,",options="header",]
 |===
 |Date |Event |Information
-|Month YYYY |FreeBSD 13.4 |link:../releases/13.4R/schedule/[Target Schedule]
+|September 2024 |FreeBSD 13.4 |link:../releases/13.4R/schedule/[Target Schedule]
 |===
-////
+
 [[freeze]]
 == Code-Freeze Status
 
