Add errata affecting 13.3R, 14.0R and 14.0R
FreeBSD-EN-24:10.zfs affects 14.1R
FreeBSD-EN-24:11.ldns affects 13.3R and 14.0R
FreeBSD-EN-24:12.killpg affects 13.3R
FreeBSD-EN-24:13.libc++ affects 14.1R

--- a/website/content/en/releases/13.3R/errata.adoc
+++ b/website/content/en/releases/13.3R/errata.adoc
@@ -58,6 +58,8 @@ For a list of all FreeBSD CERT security advisories, see https://www.FreeBSD.org/
 |link:https://www.FreeBSD.org/security/advisories/FreeBSD-EN-24:06.wireguard.asc[FreeBSD-EN-24:06.wireguard] |28 March 2024 |Insufficient barriers in WireGuard if_wg(4)
 |link:https://www.FreeBSD.org/security/advisories/FreeBSD-EN-24:07.clang.asc[FreeBSD-EN-24:07.clang] |28 March 2024 |Clang crash when certain optimization is enabled
 |link:https://www.FreeBSD.org/security/advisories/FreeBSD-EN-24:09.zfs.asc[FreeBSD-EN-24:09.zfs] |24 April 2024 |High CPU usage by kernel threads related to ZFS
+|link:https://www.FreeBSD.org/security/advisories/FreeBSD-EN-24:11.ldns.asc[FreeBSD-EN-24:11.ldns] |19 June 2024 |LDNS uses nameserver commented out in resolv.conf
+|link:https://www.FreeBSD.org/security/advisories/FreeBSD-EN-24:12.killpg.asc[FreeBSD-EN-24:12.killpg] |19 June 2024 |Lock order reversal in killpg causing livelock
 |===
 
 [[open-issues]]
