--- a/website/content/en/releases/14.1R/errata.adoc
+++ b/website/content/en/releases/14.1R/errata.adoc
@@ -55,9 +55,8 @@ For a list of all FreeBSD CERT security advisories, see https://www.FreeBSD.org/
 [width="100%",cols="40%,30%,30%",options="header",]
 |===
 |Errata |Date |Topic
-
-|No errata notices.||
-
+|link:https://www.FreeBSD.org/security/advisories/FreeBSD-EN-24:10.zfs.asc[FreeBSD-EN-24:10.zfs] |19 June 2024 |Kernel memory leak in ZFS
+|link:https://www.FreeBSD.org/security/advisories/FreeBSD-EN-24:13.libc++.asc[FreeBSD-EN-24:13.libc++] |19 June 2024 |Incorrect size passed to heap allocated std::string delete
 |===
 
 [[open-issues]]
