--- a/website/content/en/releases/14.0R/errata.adoc
+++ b/website/content/en/releases/14.0R/errata.adoc
@@ -75,6 +75,7 @@ For a list of all FreeBSD CERT security advisories, see https://www.FreeBSD.org/
 |link:https://www.FreeBSD.org/security/advisories/FreeBSD-EN-24:06.wireguard.asc[FreeBSD-EN-24:06.wireguard] |28 March 2024 |Insufficient barriers in WireGuard if_wg(4)
 |link:https://www.FreeBSD.org/security/advisories/FreeBSD-EN-24:07.clang.asc[FreeBSD-EN-24:07.clang] |28 March 2024 |Clang crash when certain optimization is enabled
 |link:https://www.FreeBSD.org/security/advisories/FreeBSD-EN-24:08.kerberos.asc[FreeBSD-EN-24:08.kerberos] |28 March 2024 |Kerberos segfaults when using weak crypto
+|link:https://www.FreeBSD.org/security/advisories/FreeBSD-EN-24:11.ldns.asc[FreeBSD-EN-24:11.ldns] |19 June 2024 |LDNS uses nameserver commented out in resolv.conf
 |===
 
 [[open-issues]]
