Fix grammar in ZFS handbook chapter, rollback section
Submitted by:	ntremble@gmail.com
PR:		279481

--- a/documentation/content/en/books/handbook/zfs/_index.adoc
+++ b/documentation/content/en/books/handbook/zfs/_index.adoc
@@ -1889,7 +1889,7 @@ See the <<zfs-zfs-send,Replication>> section for more information.
 ==== Snapshot Rollback
 
 When at least one snapshot is available, roll back to it at any time.
-Most often this is the case when the current state of the dataset is no longer and if preferring an older version.
+Most often this is the case when the current state of the dataset is no longer valid or an older version is preferred.
 Scenarios such as local development tests gone wrong, botched system updates hampering the system functionality, or the need to restore deleted files or directories are all too common occurrences.
 To roll back a snapshot, use `zfs rollback _snapshotname_`.
 If a lot of changes are present, the operation will take a long time.
@@ -1900,7 +1900,7 @@ Rolling back to a snapshot discards all other data in that dataset not part of t
 Taking a snapshot of the current state of the dataset before rolling back to a previous one is a good idea when requiring some data later.
 This way, the user can roll back and forth between snapshots without losing data that is still valuable.
 
-In the first example, roll back a snapshot because of a careless `rm` operation that removes too much data than intended.
+In the first example, roll back a snapshot because a careless `rm` operation removed more data than intended.
 
 [source,shell]
 ....
